--- a/examples/basic_usage.ipynb
+++ b/examples/basic_usage.ipynb
@@ -29,8 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from detectors.registry import get_detector\n",
-    "from utils.query import Query\n",
+    "from monitoring_toolkit.detectors.registry import get_detector\n",
+    "from monitoring_toolkit.utils.query import Query\n",
     "\n",
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
